--- a/src/blocks/element/__heart/element__heart.css
+++ b/src/blocks/element/__heart/element__heart.css
@@ -3,8 +3,7 @@
     background-repeat: no-repeat;
     height: 18.13px;
     width: 20.78px;
-    align-self: center;
-    margin-right: 20px;
+    margin-bottom: 5px;
     cursor: pointer;
     transition-property: opacity;
     transition-duration: 1s;
